Fix browser extension autofill from causing scrollbars to appear (#794)

--- a/browser-extension/src/entrypoints/contentScript/style.css
+++ b/browser-extension/src/entrypoints/contentScript/style.css
@@ -1,6 +1,8 @@
 /* AliasVault Content Script Styles */
 body {
     position: absolute;
+    margin: 0;
+    padding: 0;
 }
 
 /* Base Popup Styles */
